@@ -15,6 +15,7 @@ Settings added to remove data on plugin uninstall - ADDED
 $_SERVER['SERVER_NAME'] returns empty host with nginx server - FIXED
 Flexslider RTL chrome 53 bug, slider not showing - FIXED
 Chosen select RTL display bug - FIXED
+Yoast SEO meta tags should add category default image in meta - ADDED
 
 v1.6.8
 Address field output containd class post instead of post_address - FIXED
